# vibemon

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCH.md  CHANGELOG.md  Cargo.toml  MANUAL.md  README.md  SECURITY.md  audit.toml  buf.gen.yaml  justfile  openapi.json  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
agent/: Cargo.toml
assets/: graphics.src.html
demo/: build-oci-rootfs.sh  build-workload-initramfs.sh  cluster-e2e.sh  extract-arm64-image.sh  fetch-test-assets.sh  hvf-test-runner.sh  mesh-soak.sh  run-arm64-demo.sh  run-arm64-ubuntu.sh  run-on-lima.sh  run-uefi-ubuntu.sh  vmon-lima
docs/: book.toml
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
proto/vmon/v1/: api.proto  bridge.proto
python/: MANIFEST.in  README.md  _hvf_check.py  cli_e2e.py  e2e.py  pyproject.toml
python/bench/: __init__.py  p50.py
python/tests/: cluster_harness.py  conftest.py  test_api_coverage.py  test_build.py  test_cas.py  test_checkpoint_fixes.py  test_cli.py  test_cluster_e2e.py  test_config.py  test_context.py  test_daemon.py  test_e2e.py  test_faults.py  test_ha.py  test_hardening.py  test_image_static.py  test_invariants.py  test_lease.py  test_mesh.py  test_mesh_failover.py  test_migrate.py  test_net.py  test_pool.py  test_quorum.py  test_records.py  test_remote_sdk.py  test_sandbox_secrets.py  test_sdk_cluster_e2e.py  test_secret.py  test_security.py  test_server.py  test_vmm_args.py  test_volume.py  test_volume_ha.py  v1_stub.py
python/vmon/: __init__.py  _transport.py  agent.py  agent_client.py  assets.py  build.py  cas.py  cli.py  client.py  config.py  console.py  context.py  control.py  core.py  daemon.py  doctor.py  image.py  lease.py  mesh.py  net.py  pool.py  records.py  remote.py  replica.py  sandbox.py  secret.py  server.py  vmm.py  volume.py  wsframe.py
python/vmon/server/: __init__.py  api.py  app.py  auth.py  leases.py  mesh_routes.py  migration.py  models.py  proxy.py  reconciler.py  record_sync.py  runtime.py  supervisor.py  templates.py  web.py
python/vmon/web/: index.html
python/vmon/web/assets/: index-BRLzHmVZ.js  index-BnsmUHD5.js  index-CLltK7yC.css  index-DBQ8gxZB.js  index-Dn16yGnR.js  index-qR0kQsko.js
scripts/: deploy_portable_echo.py  package-release.sh  xeon-sync.sh  xeon-test.sh
sdk/py/: README.md  e2e.py  e2e_remote.py  function_benchmark.py  pyproject.toml
sdk/py/examples/: durable_functions.py
sdk/py/tests/: test_actor_app_sdk.py  test_api_coverage.py  test_context.py  test_definition_options.py  test_driver.py  test_function_benchmark.py  test_package.py  test_package_artifacts.py  test_remote_aio.py  test_remote_codec.py  test_remote_runner.py  test_remote_sdk.py  test_remote_source.py  test_sandbox_secrets.py  test_secret.py  test_value_envelopes.py  test_volume.py  typing_remote.py  v1_stub.py
sdk/py/vmon/: __init__.py  _cli_inspect.py  _endpoint.py  _function_proto.py  _remote_runner.py  _remote_source.py  _transport.py  app.py  call_group.py  client.py  cls.py  context.py  decorators.py  driver.py  errors.py  image.py  models.py  options.py  package.py  process.py  remote.py  sandbox.py  secret.py  values.py  volume.py  wsframe.py
sdk/py/vmon/v1/: __init__.py  api_pb2.py  api_pb2.pyi  api_pb2_grpc.py  bridge_pb2.py  bridge_pb2.pyi
src/: bench.rs  cli.rs  config.rs  contexts.rs  control.rs  error.rs  jail.rs  layout.rs  main.rs  memory.rs  metrics.rs  pager.rs  result.rs  sandbox.rs  tap.rs  transport.rs  vmm.rs  ws.rs
tests/: agent.rs  blk.rs  boot.rs  cli_e2e.rs  cli_matrix.rs  cluster_e2e.rs  fs.rs  jail.rs  lifecycle.rs  lifecycle_regression.rs  net.rs  pager.rs  perf.rs  rng.rs  server_e2e.rs  snapshot.rs  soak.rs  timeout.rs  uefi.rs  workloads.rs
ui/: biome.json  index.html  package-lock.json  (+3 more)
vmm/: Cargo.toml
vmm/src/: config.rs  control.rs  disk_snapshot.rs  jail.rs  layout.rs  lib.rs  memory.rs  metrics.rs  result.rs  sandbox.rs  tap.rs  vmm.rs  vmm_windows.rs  windows_pipe.rs
vmm/src/arch/: mod.rs
vmm/src/arch/aarch64/: fdt.rs  mod.rs
vmm/src/arch/x86_64/: boot.rs  cpuid.rs  interrupts.rs  mod.rs  mptable.rs  msr.rs  regs.rs  smbios.rs  state.rs  state_windows.rs
vmm/src/devices/: mod.rs  pci.rs  serial.rs  vfio.rs
vmm/src/hv/: mod.rs  neutral.rs
vmm/src/hv/hvf/: memory.rs  state.rs  vcpu.rs  vm.rs
vmm/src/hv/kvm/: state.rs  vm.rs
vmm/src/hv/whp/: cpuid.rs  ioapic.rs  mod.rs  vcpu.rs  vm.rs
vmm/src/os/: eventfd.rs  mod.rs  windows_eventfd.rs
vmm/src/snapshot/: mod.rs
vmm/src/virtio/: block.rs  console.rs  fs.rs  fs_windows.rs  mod.rs  net.rs  pci.rs  remotefs.rs  rng.rs
vmm/src/virtio/net/: user.rs  user_windows.rs
vmond/: Cargo.toml
vmond/src/: config.rs  doctor.rs  error.rs  home.rs  lib.rs  models.rs  net.rs  pools.rs  portable_history.rs  postgres.rs  registry.rs  s3.rs  volumes.rs
vmond/src/api/: bridge.rs  error.rs  grpc.rs  mod.rs  routes.rs  sandbox_stream.rs  server.rs  state.rs  validation.rs  ws.rs
vmond/src/engine/: agent.rs  control.rs  diskdelta.rs  facade.rs  mod.rs  rollback_acceptance.rs  s3proxy.rs  spawn.rs  staging_gc.rs
vmond/src/function/: actor.rs  artifact.rs  gateway.rs  image.rs  metrics.rs  mod.rs  protocol.rs  protocol_test.rs  runner.py  runner_test.py  scheduler.rs  store.rs  worker.rs
vmond/src/image/: assets.rs  build.rs  cas.rs  mod.rs
vmond/src/mesh/: bundle.rs  cluster_store.rs  cluster_tests.rs  gossip.rs  lease.rs  mod.rs  place.rs  proxy.rs  reconciler.rs  record.rs  replica.rs  replica_cache.rs  routes.rs  runtime.rs  runtime_acceptance.rs  state.rs  transfer.rs
vmond/src/net/: broker.rs  policy.rs  slots.rs
vmond/src/orch/: autoscaler.rs  controller.rs  dashboard.html  dashboard.rs  e2e_tests.rs  miniredis.rs  mod.rs  redis.rs  sched.rs  server.rs  table.rs  worker.rs
vmond/src/security/: audit.rs  credentials.rs  crypto.rs  gateway.rs  mod.rs  tenant.rs
vmond/tests/: mesh_fault_routes.rs  mesh_invariants.rs  mesh_lease_record_replica.rs  mesh_state_place.rs
vmond/tests/mesh_support/: mod.rs
vmond/web/: index.html
vmond/web/assets/: index-CSIk2XSq.js  index-Ds9tnAT_.js
(+255 files in other folders)
