[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vmon"
version = "0.2.0"
description = "Vibemon — friendly Python SDK + CLI for microVMs (run containers, suspend/resume, snapshot, fork)"
requires-python = ">=3.9"
dependencies = [
    "click~=8.1",
    "rich>=12.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
test = [
    "pytest",
]

[project.scripts]
vmon = "vmon.cli:main"

[tool.setuptools]
packages = ["vmon"]
include-package-data = true

[tool.setuptools.package-data]
vmon = ["web/**/*", "_agent/*"]
