[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vmon"
version = "0.2.0"
description = "Thin Python SDK for the Rust vmon API"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.13",
    "pytest>=8",
]


[tool.setuptools]
packages = ["vmon"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# pyflakes (F) + pycodestyle (E/W) + isort (I) + pyupgrade (UP) + bugbear (B)
# + comprehensions (C4): a strong, non-pedantic baseline.
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
    # `dict(key=value)` reads cleanly as kwargs and is used consistently here;
    # forcing quoted-key literals would be a readability downgrade.
    "C408",
]


[tool.mypy]
python_version = "3.14"
files = ["vmon"]
exclude = ["^e2e\\.py$", "^tests/"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
