[package]
name = "vmm"
version = "0.1.0"
edition = "2024"
description = "Vibemon per-VM monitor core (KVM/HVF microVM)"

[lib]

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
virtio-bindings = "0.2"
virtio-queue = "0.17"
vm-memory = { version = "=0.17.1", features = ["backend-mmap", "backend-bitmap"] }
vmm-sys-util = { version = "0.15", features = ["with-serde"] }
linux-loader = { version = "0.13", features = ["bzimage", "elf"] }
vm-superio = "0.8.1"
parking_lot = "0.12.5"
vm-fdt = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", default-features = false, features = ["use-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
miniz_oxide = "0.8"
rayon = "1"
flume = { version = "0.11", default-features = false }
vmon-agent = { path = "../agent" }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = "0.14", features = ["fam-wrappers", "serde"] }
kvm-ioctls = "0.25"
io-uring = "0.7"
landlock = "0.4"
seccompiler = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
libslirp = { version = "4.3.2", default-features = false }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
applevisor = { version = "1.0", default-features = false, features = ["macos-15-0"] }
applevisor-sys = { version = "1.0", default-features = false, features = ["macos-15-0"] }
squib-gic = "0.2"
