[package]
name = "vmond"
version = "0.1.0"
edition = "2024"
description = "Vibemon server core: engine, image pipeline, v1 HTTP API, mesh"

[lib]

[lints]
workspace = true

[dependencies]
axum = { version = "0.8", features = ["http2", "ws"] }
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.10"
cron = "0.15"
flume = { version = "0.11", default-features = false }
futures-util = { version = "0.3", default-features = false }
hex = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
include_dir = "0.7"
libc = "0.2"
parking_lot = "0.12.5"
rayon = "1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = { version = "0.10", features = ["asm"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "process", "signal", "io-util", "time", "sync", "fs", "macros"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
vmm = { path = "../vmm" }
vmon-proto = { path = "../proto" }
vmon-agent = { path = "../agent" }
bytes = "1"
zstd = { version = "0.13", features = ["zstdmt"] }
tonic = "0.14.6"

[dev-dependencies]
tempfile = "3"
